[gd_scene load_steps=3 format=3 uid="uid://dvefjhvuqmubq"]

[ext_resource type="Script" uid="uid://bjlojs8vmah72" path="res://Scenes/Mechanics/BlockDetector/block_detector.gd" id="1_pitgp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcw8l"]
size = Vector2(100, 100)

[node name="BlockDetector" type="Node2D"]
script = ExtResource("1_pitgp")

[node name="BlockDetectorZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8
input_pickable = false

[node name="square" type="CollisionShape2D" parent="BlockDetectorZone"]
position = Vector2(50, 50)
shape = SubResource("RectangleShape2D_wcw8l")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 100)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.501333, 0.32, 1, 0.482353)

[connection signal="area_entered" from="BlockDetectorZone" to="." method="_on_block_detector_zone_area_entered"]
[connection signal="area_exited" from="BlockDetectorZone" to="." method="_on_block_detector_zone_area_exited"]
